# chinese_guide_of_nicegui_for_beginner

./: LICENSE  README.md  README_EXAMPLES.md  README_INDEX.md  README_MORE.md  index.html  pyproject.toml
src/chinese_guide_of_nicegui_for_beginner/: 0_main.py  2_1_hello_world.py  2_3_3_2_ui_icon.py  get_all_icon_names.py  icons.py  result.txt  result_name_dict.txt  result_type_dict.txt  ui_icon_search.py
